--- a/report/draft.Rmd
+++ b/report/draft.Rmd
@@ -41,7 +41,7 @@ header-includes:
 biblio-style: apsr
 title: "Do We All Long for the Past? Investigating Nostalgia as a Persuasive Political Rhetorical Strategy"
 author:
-  - name: Mariken A.C.G. van der Velden
+  - name: Mariken A.C.G. van der Velden*
   - affiliation: Vrije Universiteit Amsterdam
   - name: Alberto López Ortega
   - affiliation: Vrije Universiteit Amsterdam  
@@ -49,8 +49,8 @@ author:
   - affiliation: Vrije Universiteit Amsterdam 
   - name: Puck Guldemond
   - affiliation: Wageningen Universtiy & Research
-thanks: "Replication files are available on the author's Github account (XZX); **Current version**: `r format(Sys.time(), '%B %d, %Y')`;"
-anonymous: TRUE
+thanks: "* indicates corresoponding authorh; Replication files are available on the [corresponding author's Github account](https://github.com/MarikenvdVelden/nostalgia-populism); **Current version**: `r format(Sys.time(), '%B %d, %Y')`;"
+anonymous: FALSE
 abstract: "_This paper delves into the persuasive role of nostalgia in political rhetoric, questioning when and for whom it exerts influence. While right-wing populists have embraced nostalgia, this study argues that nostalgia is a versatile tool across ideological lines. The study uses a multidimensional approach, including reluctant, progressive, and playful nostalgia, to measure nostalgia's impact. It assesses nostalgia's persuasive ability by separating it from scapegoating in political discourse. Findings reveal an overlap between reluctant nostalgia and populist attitudes, broadening the conceptualization of nostalgia in political research. This paper highlights the need for a comprehensive understanding of nostalgia's role in shaping political campaigns._"
 keywords: "Nostalgia, Political Parties' Rhetoric, Campaign Messages, Measurement Models, Qualitiative Narrative Analysis, Experiment"
 geometry: margin=1in
@@ -126,7 +126,7 @@ Using this Dutch data, we conduct three studies.
 First, to test our assumption that nostalgia encompasses more than a nativist tendency, we employ a Principal Component Analysis (PCA) empirically investigate and confirm the conceptual overlap between populist attitudes and reluctant nostalgia.
 Second, we explore the nostalgic narratives voters put forward, as well as explore the profiles of voters that are nostalgic for different conceptions of the past in order to demonstrate that people across the ideological board experience nostalgia.
 We do so using descriptive statistics and t-tests.
-Finally, we test the persuasiveness of nostalgia as a rhetorical style through a pre-registered vignette experiment.
+Finally, we test the persuasiveness of nostalgia as a rhetorical style through a pre-registered vignette experiment.^[Our online compendium combines the data and the preregistration: https://github.com/MarikenvdVelden/nostalgia-populism]
 
 We show that there is considerable overlap between reluctant nostalgia and populist attitudes, but not between populist attitudes and other forms of nostalgia.
 We thereby provide evidence for a wider conceptualization than thus-far used in studies of political science and political communication. 
@@ -219,7 +219,7 @@ The panel is an opt-in sample, yet representative based on demographic variables
 The data presented in this paper comes from the first and the fourth wave -- 11 January 2023 till 18 January 2023 and 7 till 14 March 2023. During the first wave, participants were asked about their political preferences, their nostalgic attitudes, their populist attitudes, and were asked to fill in an open-ended question about what time in the past they are nostalgic for, among other questions. 
 In the fourth wave, we included an experiment in order to disentangle nostalgic messages from ideological ones. 
 In the first wave, `2,185` participants completed the survey, in the fourth wave `1,560` participants completed the survey. 
-We have used the recommendation of Gerber and Green (2011) to impute missing values with the mean value per wave, and indicate if a variable has more than ten percent missing values.
+We have used the recommendation of Gerber and Green (2011) to impute missing values with the mean value per wave, and indicate if a variable has more than ten percent missing values.^[Our analytical code is available on our Online Compendium: https://github.com/MarikenvdVelden/nostalgia-populism]
 
 ## Study 1 & 2: Observational Data
 
@@ -368,13 +368,13 @@ In a follow-up study, conducted with the same participants as the observational 
 ***Dependent Variables.*** 
 To test the support for nostalgic messages in H3, we first asked respondents on an eleven-point scale, where `0` is totally disagree and `10` is totally agree, the extent to which they agreed with the statement they just read. 
 As a follow up, we asked respondents to select the campaign message the party should pick because a) it fits you best; b) it fits the general Dutch voters best; and c) if fits left-wing/ right-wing voters best. 
-Respondents could select any of the four texts we created for the experiment (see our [Online Compendium](X)).
+Respondents could select any of the four texts we created for the experiment (see our [Online Compendium](https://github.com/MarikenvdVelden/nostalgia-populism)).
 
 ***Experimental Treatments.*** 
 Based on ideological self-selection, using a five-point Likert scale to classify whether respondents would classify themselves as *very progressive*, *progressive*, *center*, *conservative*, or *very conservative*, we classify people into either a left-wing progressive or right-wing conservative leaning group. 
 For each ideological group, we randomize respondents into seeing one of four different potential campaign messages that a party of that ideology is testing for the next Dutch elections. 
 The messages where created by the authors based on the narratives coming from the open ended questions as well as based on the reviewed literature in sociology and marketing.
-Messages can either be nostalgic or not, as well as consist of a scapegoat or not -- creating four experimental groups, see our [Online Compendium](X).
+Messages can either be nostalgic or not, as well as consist of a scapegoat or not -- creating four experimental groups, see our [Online Compendium](https://github.com/MarikenvdVelden/nostalgia-populism).
 Respondents that categorize themselves as conservative or very conservative get the right-wing conservative treatments. 
 Respondents that categorize themselves as center, progressive, or very progressive are shown the left-wing progressive treatments.
 An example of the treatment text for a left-wing voter including nostalgia and a scapegoat is: 
@@ -413,12 +413,12 @@ kbl(df[1:4,], booktabs =T, caption = "\\label{tab:nost-treat1} Experimental Trea
    column_spec(3, width = "3cm")
 ```
 
-***Control Variables.*** Based on a balance test (see our [Online Compendium](X) for details), we included unbalanced demographic covariates as well as the ideological tone of the experimental message, whether it was a nostalgic and/or scapegoat message into our analysis.
+***Control Variables.*** Based on a balance test (see our [Online Compendium](https://github.com/MarikenvdVelden/nostalgia-populism) for details), we included unbalanced demographic covariates as well as the ideological tone of the experimental message, whether it was a nostalgic and/or scapegoat message into our analysis.
 
 ***Methods of Estimation.*** We use PCA and a Pearson's Rho correlation to test H1. 
 We use descriptive statistics and a t-test for H2.
 For H3, we employ simple OLS regressions. 
-All analytical material is published in our [Online Compendium](X).
+All analytical material is published in our [Online Compendium](https://github.com/MarikenvdVelden/nostalgia-populism).
 
 # Persuasive Effect of Nostalgic Rhetoric
 
@@ -429,7 +429,7 @@ Finally, leveraging an experimental `2*2` design, we cue nostalgic values as wel
 ## Conceptual Overlap between Populism & Nostalgia
 
 To measure the empirical overlap between *Populist Attitudes* and *Nostalgic Attitudes*, we perform a Principal Component Analysis (PCA), using all nine populist and eleven nostalgic survey items.^[Before conducting the PCA, we did calculated a correlation table, see our Online Compendium, showing that the two items on populist items that encompass the core dimensions of *sovereignty of the people* and an *anti-elitist* and *anti-pluralist*, is negatively correlated with a nostalgic factor that would indicate a high degree of progressiveness (as the responses on these survey items illustrate that respondents view higher shares of ethnic minorities as en improvement etc.).] 
-Before running the measurement model of all nostalgic and populist measures, the nostalgia items are examined more closely in a separate analysis (see [Online Compendium](X)).^[This is done as these measures have thus far not been used in much of political science or political communication literature. A confimatory factor analysis of the nostalgic items overall offers the expected results: The Nostalgic items that refer to media and entertainment load together on one factor, while the items that would suggest either a more reluctant/nationalistic or progressive attitude (depending on the value of the response) are split into two separate factors which significantly and positively correlate with each other.]
+Before running the measurement model of all nostalgic and populist measures, the nostalgia items are examined more closely in a separate analysis (see [Online Compendium](https://github.com/MarikenvdVelden/nostalgia-populism)).^[This is done as these measures have thus far not been used in much of political science or political communication literature. A confimatory factor analysis of the nostalgic items overall offers the expected results: The Nostalgic items that refer to media and entertainment load together on one factor, while the items that would suggest either a more reluctant/nationalistic or progressive attitude (depending on the value of the response) are split into two separate factors which significantly and positively correlate with each other.]
 
 The PCA loadings (covariance) demonstrate that for each latent construct two indicators are contributing most to the measure. 
 For Populist Attitudes, it are the anti-pluralist item *"what is called 'compromising' in politics is really just betraying your principles"* and the anti-establisment item *"The will of the common people should be the highest principle in politics"*. 
